# spond-cancellation

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  render.yaml
migrations/: dedupe_approved_transfers.py
templates/: admin.html  admin_login.html  base.html  loading.html  step_cancelled.html  step_email.html  step_target.html  step_verify.html
tests/: conftest.py  test_app.py
