[project]
name = "spond-cancellation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.2.2",
    "spond>=1.2.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
]
